// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component API/Forms/FormLegend No Styles 1`] = `
<legend
  className="xxx-fieldset__legend"
>
  Default
</legend>
`;

exports[`Storyshots Component API/Forms/FormLegend Primary 1`] = `
<legend
  className="fd-fieldset__legend"
>
  Default
</legend>
`;
